--- a/style.css
+++ b/style.css
@@ -119,3 +119,22 @@ img{
      margin: 20px auto;
  }
 }
+
+/* side nav */
+.sidenav{
+ background: var(--dark);
+ color: #fff;
+ position: fixed;
+ top: 0;
+ bottom: 0;
+ right: -100%;
+ width: 300px;
+ padding: 20px;
+ transition: var(--transition);
+ z-index: 10;
+}
+
+/********/
+.sidenav.show{
+ right: 0;
+}
