--- a/style.css
+++ b/style.css
@@ -193,3 +193,45 @@ img{
  width: 85vw;
  margin: 0 auto!important;
 }
+
+/* service */
+.services{
+ margin: 40px 0;
+}
+.service{
+ display: flex;
+ margin: 30px 0;
+}
+.service-icon{
+ flex: 30%;
+ align-self: flex-start;
+ font-size: 48px;
+ color: #252525;
+}
+.service-content{
+ padding-left: 20px;
+}
+.service-content h2{
+ opacity: 0.7;
+}
+.service-content button{
+ margin-left: 0;
+ margin-right: 0;
+ background: var(--yellow);
+ color: #fff;
+}
+@media(min-width: 992px){
+ .services-container{
+     display: grid;
+     grid-template-columns: repeat(2, 1fr);
+     grid-column-gap: 30px;
+ }
+ .title h2{
+     font-size: 10px!important;
+ }
+}
+@media(max-width: 500px){
+ .title h2{
+     font-size: 24px;
+ }
+}
