--- a/style.css
+++ b/style.css
@@ -106,6 +106,9 @@ img{
 }
 .head-btn:hover{
  background: transparent;
+ background-color: #f9d342;
+ color: #1d1b1b;
+ border-radius: 20px;
 }
 @media(max-width: 500px){
  .head-btn{
@@ -279,6 +282,12 @@ img{
 }
 .room-image:hover img{
  transform: scale(1.07);
+}
+.room .btn:hover {
+ background-color: #f9d342;
+ color: #554f4f;
+ border-radius: 20px;
+
 }
 @media (min-width: 900px){
  .rooms-container{
