--- a/style.css
+++ b/style.css
@@ -322,3 +322,45 @@ img{
      flex-direction: row-reverse;
  }
 }
+
+/* footer */
+.footer{
+ background: var(--dark);
+ color: #fff;
+ text-align: center;
+}
+.footer-container{
+ width: 85vw;
+ margin: 0 auto;
+ padding: 30px 0;
+}
+.footer-container p, .footer-container a, .footer-container span{
+ opacity: 0.8;
+}
+.footer a{
+ display: block;
+ color: #fff;
+ text-decoration: none;
+}
+.social-icons{
+ list-style: none;
+ display: flex;
+ justify-content: center;
+ padding: 15px 0;
+}
+.social-icons li{
+ margin: 0 10px;
+ width: 50px;
+ height: 50px;
+ background: #2e2e2e;
+ border-radius: 50%;
+ transition: var(--transition);
+ cursor: pointer;
+}
+.social-icons li:hover{
+ background: #fff;
+ color: #2e2e2e;
+}
+.contact-item span{
+ display: block;
+}
