--- a/style.css
+++ b/style.css
@@ -364,3 +364,37 @@ img{
 .contact-item span{
  display: block;
 }
+@media(min-width: 900px){
+ .footer-container{
+     display: grid;
+     grid-template-columns: repeat(2, 1fr);
+     grid-gap: 20px;
+ }
+}
+@media(min-width: 1170px){
+ .footer{
+     text-align: left;
+ }
+ .footer-container{
+     grid-template-columns: repeat(4, 1fr);
+ }
+ .footer-container div:nth-child(1) p{
+     padding-right: 20px;
+ }
+ .contact-item{
+     display: grid;
+     grid-template-columns: 10% 90%;
+     margin-bottom: 15px;
+     align-items: center;
+ }
+}
+
+.showModal{
+ position: fixed;
+ background: transparent;
+ top: 0;
+ right: 0;
+ bottom: 0;
+ left: 0;
+ z-index: 5;
+}
