--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@ body{
     cursor: pointer;
     transition: var(--transition);
 }
+
+a {
+ text-decoration: none;
+ color: #fff;
+}
 .btn:hover{
     opacity: 0.85;
 }
@@ -283,6 +288,9 @@ img{
 }
 .room-image:hover img{
  transform: scale(1.07);
+}
+.room .btn a {
+ color: black;
 }
 .room .btn:hover {
  background-color: #f9d342;
